--- a/todo/templates/todo/deleteTodo.html
+++ b/todo/templates/todo/deleteTodo.html
@@ -1,9 +1,9 @@
 <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-<p>you deleted {{item}}</p>
-
-<a href="{% url 'todolist' %}">ยกเลิก</a>
-
+<p style="font-size: 2.5em;">ต้องการลบรายการ {{item}}</p>
+<br>
 <form method="post" action="">
     {% csrf_token %}
-    <input type="submit">
+    <input style="font-size: 1.85em;" type="submit" value="ยืนยัน">
 </form>
+<br>
+<a style="font-size: 1.85em;" href="{% url 'todolist' %}">ยกเลิก</a>
