--- a/todo/templates/todo/updateTodo.html
+++ b/todo/templates/todo/updateTodo.html
@@ -1,16 +1,16 @@
 <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 <div>
-    <h3>Update</h3>
+    <h3>แก้ไข</h3>
     <form method="post" action="">
         {% csrf_token %}
-        <h4 class="text-yellow-300">title</h4>
-        <p class="border-solid border-2 border-sky-500">{{form.title}}</p>
-        <h4>description</h4>
+        <h4 class="">หัวข้อ</h4>
+        <p>{{form.title}}</p>
+        <h4>คำอธิบาย</h4>
         <p>{{form.description}}</p>
-        <h4>deadline</h4>
+        <h4>หมดเวลา</h4>
         <p>{{form.deadline}}</p>
-        <h4>Done</h4>
+        <h4>เสร็จหรือไม่?</h4>
         <p>{{form.done}}</p>
-        <input type="submit">
+        <input style="font-size: 1.2em;" type="submit" value="ยืนยัน">
     </form>
 </div>
